# apicula

./: .gitignore  Dockerfile  FUNDING.yml  GWVERSION  LICENSE  Makefile  bram_experiments.ipynb  bslib.py  chipdb.py  clock_experiments.ipynb  clock_fuzzer.py  codegen.py  dat19_h4x.py  fse.txt  fuse_h4x.py  fuzzer.py  gowin-pll.py  gowin_pack.py  gowin_unpack.py  gwlicense.ini  pindef.py  readme.md  report.py  run_comparison.sh  run_comparison_live.sh  setup.py  test_clk.py  tiled_fuzzer.py  tm_h4x.py  tracing.py  wirenames.py
apycula/: __init__.py  attrids.py  bitmatrix.py  bslib.py  build_family_info.py  chipdb.py  chipdb_builder.py  clock_fuzzer.py  codegen.py  crc16.py  dat19.py  dat19_h4x.py  dat_parser.py  family_aliases.py  find_sdram_pins.py  fse_parser.py  fuse_h4x.py  generate_cpp.py  gowin_bba.py  gowin_pack.py  gowin_pll.py  gowin_unpack.py  ini_h4x.py  iob_fuzzer.py  log_parsers.py  pindef.py  tiled_fuzzer.py  tm_h4x.py  tm_parser.py  tracing.py  wirenames.py
doc/: alu.md  architecture.md  bsram-fix.md  commandstructure.md  compression.md  delay_calculations.md  device_grouping.md  dsp.md  emcu.md  filestructure.md  hclk.md  longval-tables.md  longwires.md  mipi.md  muxes.md  sdram.md  special-pins.md
example/: example.v  pnr.cfg  run.tcl
examples/: DPB-video-ram.v  DPB.v  DPB16.v  DPX9B-video-ram.v  DPX9B.v  DPX9B18.v  Makefile  SDPB.v  SDPX9B-image-rom.v  SDPX9B-video-ram.v  SDPX9B.v  SP.v  SPX9.v  blinky-clkdiv-dhcen.v  blinky-clkdiv.v  blinky-dlldly.v  blinky-oddr.v  blinky-osc.v  (+76 more)
gowin_pack_cpp/: .gitignore  CMakeLists.txt  REVIEW.md
gowin_pack_cpp/src/: attrids.hpp  bitstream.cpp  bitstream.hpp  chipdb.cpp  chipdb.hpp  chipdb_adaptors.hpp  chipdb_types.hpp  fuses.cpp  fuses.hpp  main.cpp  netlist.cpp  netlist.hpp  place.cpp  place.hpp  route.cpp  route.hpp  utils.hpp  wirenames.hpp
gowin_pack_cpp/src/bels/: alu.cpp  bsram.cpp  dff.cpp  dsp.cpp  iob.cpp  iologic.cpp  lut.cpp  pll.cpp
gowin_pack_cpp/tests/: bsram_gw5ast.json  dlldly_basic.json  dlldly_negative.json  pincfg_i2c.json  pincfg_sspi.json  run_tests.sh
(+407 files in other folders)
